added change password. tweaked look and feel a little more and a few other things.

--- a/Resources/Views/TableCells/AccountSubCell.xib
+++ b/Resources/Views/TableCells/AccountSubCell.xib
@@ -126,7 +126,7 @@
 								</object>
 								<object class="NSColor" key="IBUITextColor">
 									<int key="NSColorSpace">3</int>
-									<bytes key="NSWhite">MC45OTYzNTAzNQA</bytes>
+									<bytes key="NSWhite">MC44OTk5OTk5OAA</bytes>
 								</object>
 								<nil key="IBUIHighlightedColor"/>
 								<int key="IBUIBaselineAdjustment">1</int>
