--- a/Resources/Views/TableCells/RosterCell.xib
+++ b/Resources/Views/TableCells/RosterCell.xib
@@ -122,7 +122,7 @@
 								</object>
 								<object class="NSColor" key="IBUITextColor">
 									<int key="NSColorSpace">3</int>
-									<bytes key="NSWhite">MC45OTYzNTAzNQA</bytes>
+									<bytes key="NSWhite">MC44OTk5OTk5OAA</bytes>
 								</object>
 								<nil key="IBUIHighlightedColor"/>
 								<int key="IBUIBaselineAdjustment">1</int>
