--- a/Resources/Views/ViewControllers/SectionViewController.xib
+++ b/Resources/Views/ViewControllers/SectionViewController.xib
@@ -119,11 +119,11 @@
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
-						<string key="label">nicknameLable</string>
+						<string key="label">nicknameLabel</string>
 						<reference key="source" ref="372490531"/>
 						<reference key="destination" ref="486195379"/>
 					</object>
-					<int key="connectionID">7</int>
+					<int key="connectionID">12</int>
 				</object>
 			</object>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -229,7 +229,7 @@
 				</object>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">11</int>
+			<int key="maxID">12</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -353,7 +353,7 @@
 					<string key="className">SectionViewController</string>
 					<string key="superclassName">UIViewController</string>
 					<object class="NSMutableDictionary" key="outlets">
-						<string key="NS.key.0">nicknameLable</string>
+						<string key="NS.key.0">nicknameLabel</string>
 						<string key="NS.object.0">UILabel</string>
 					</object>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
