--- a/Resources/Views/ViewControllers/ServiceSearchViewController.xib
+++ b/Resources/Views/ViewControllers/ServiceSearchViewController.xib
@@ -62,7 +62,9 @@
 						<float key="IBUIMinimumFontSize">1.700000e+01</float>
 						<object class="IBUITextInputTraits" key="IBUITextInputTraits">
 							<int key="IBUIAutocorrectionType">1</int>
+							<int key="IBUIKeyboardType">7</int>
 						</object>
+						<int key="IBUIClearButtonMode">1</int>
 					</object>
 					<object class="IBUILabel" id="47026763">
 						<reference key="NSNextResponder" ref="740598236"/>
@@ -102,6 +104,7 @@
 						<object class="IBUITextInputTraits" key="IBUITextInputTraits">
 							<int key="IBUIAutocorrectionType">1</int>
 						</object>
+						<int key="IBUIClearButtonMode">1</int>
 					</object>
 					<object class="IBUILabel" id="523058321">
 						<reference key="NSNextResponder" ref="740598236"/>
